see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

25-Nov-2009 Andrew Eddie
 + Added menu_image param to alias and url menu link types.
 + Added support to JQuery for Insert, Update and Delete methods; added glue to having clause (thanks Rafael Diaz-Tushman).
 # Remove integer filter from timezone fields in global configuration.
 ^ Added ability to load key=>value tuples in JTable::load (thanks Rafael Diaz-Tushman).
 ^ Added ability to automatically set table fields in JTable::load (thanks Rafael Diaz-Tushman).
 ^ Removed manual properties from core JTable classes.

24-Nov-2009 Andrew Eddie
 ^ Initial refactoring of com_modules.
   - changed menu page selector to list of checkboxes.
   - changed params to fields in module XML files.
   - changed add module page to modal popup.
   - added layout override selector field to all modules
 ^ Remove iscore, control and numnews fields from jos_modules table.
 ^ Change jos_modules.title to VARCHAR 100
 ^ Change jos_modules.params to VARCHAR 5120
 ^ Make allowance for default language in language form field of article, newsfeed and weblink.
 ^ Added language field to jos_modules.

23-Nov-2009 Ron Severdia
^ Added panels on Edit Category screen, new panels added for default params

22-Nov-2009 Ron Severdia
^ CSS button styling, icon update
# Language fixes

21-Nov-2009 Ron Severdia
^ Modal UI fixes
# BlueStork CSS cleanup for modals, change px to em

20-Nov-2009 Louis Landry
 + Added JHtmlSliders
 + Added JHtmlTabs
 ! JPane and child classes has been deprecated in favor of JHtml helpers.
 ! Big thanks to Christophe Demko for his work on this.